[package]
name = "res-kafka"
description = "Kafka messaging resource"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
chrono.workspace = true
fromenv.workspace = true
futures.workspace = true
jsonschema = "0.37.4"
rand.workspace = true
rdkafka = { version = "0.38", features = ["cmake-build", "ssl-vendored", "tokio"] }
runtime.workspace = true
schema-registry-client = "0.4.1"
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
wasi-messaging.workspace = true

[dev-dependencies]
csv.workspace = true
serde.workspace = true
