[package]
name = "res-mongodb-next"
description = "MongoDB resource provider"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
wasi-blobstore-next.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mongodb.workspace = true
runtime.workspace = true