[package]
name = "res-mongodb"
description = "MongoDB resource provider"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
chrono.workspace = true
fromenv.workspace = true
futures.workspace = true
mongodb = "3.4.1"
runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
wasi-blobstore.workspace = true
