[package]
name = "res-nats-next"
description = "NATS provider for messaging, keyvalue, and blobstore"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
nkeys = { version = "0.4.5" }
tracing.workspace = true
wasi-blobstore.workspace = true
wasi-keyvalue-next.workspace = true
wasi-messaging.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-nats.workspace = true
tokio.workspace = true
runtime.workspace = true
