[package]
name = "res-nats"
description = "NATS resource provider"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
nkeys.workspace = true
runtime.workspace = true
tracing.workspace = true
