[package]
name = "res-nats"
description = "NATS provider for messaging, keyvalue, and blobstore"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
async-nats.workspace = true
chrono.workspace = true
fromenv.workspace = true
futures.workspace = true
nkeys = { version = "0.4.5" }
runtime.workspace = true
tokio.workspace = true
tracing.workspace = true
wasi-blobstore.workspace = true
wasi-keyvalue.workspace = true
wasi-messaging.workspace = true
