[package]
name = "res-postgres"
description = "Postgres resource provider"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
deadpool-postgres = { version = "0.14", default-features = false, features = ["rt_tokio_1"] }
futures.workspace = true
runtime.workspace = true
rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
serde_json.workspace = true
tokio-postgres = "0.7"
tokio-postgres-rustls = { version = "0.13", default-features = false }
tracing.workspace = true
wasi-sql.workspace = true
webpki-roots = { version = "1.0", default-features = false }
