[package]
name = "res-redis"
description = "Redis resource provider"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
runtime.workspace = true
tracing.workspace = true
wasi-keyvalue.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redis.workspace = true
