[package]
name = "runtime"
description = "Credibil runtime"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = ["jit"]
# Enables just-in-time wasm to machine code compilation.
jit = ["wasmtime/cranelift"]

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
base64ct.workspace = true
cfg-if.workspace = true
futures.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["signal"] }
clap = { version = "4.5.48", features = ["derive"] }
credibil-otel.workspace = true
wasmtime = { workspace = true, features = ["runtime"] }
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true

bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
