[package]
name = "sdk-http"
description = "Wrapper for wasi-http incoming request bindings"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
# workspace
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
credibil-encoding.workspace = true
futures.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tracing.workspace = true
wasi.workspace = true
wit-bindings.workspace = true
# direct
bincode = "2.0.1"
percent-encoding = "2.3.2"
