[package]
name = "wasi-blobstore-mdb"
description = "WASI blobstore WIT implementation using mongodb"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
mongodb.workspace = true
runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
