[package]
name = "wasi-config"
description = "WASI Config WIT implementation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
http.workspace = true
tracing.workspace = true
wasmtime-wasi-config.workspace = true

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
base64ct.workspace = true
fromenv.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
kernel.workspace = true
tokio.workspace = true
wasmtime = { workspace = true, features = ["component-model-async"] }
wasmtime-wasi.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
axum.workspace = true
rkyv = "0.8.12"
bytes.workspace = true
credibil-encoding.workspace = true
http-body.workspace = true
http-body-util.workspace = true
percent-encoding = "2.3.2"
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
wasi-keyvalue.workspace = true
wasip3.workspace = true
wit-bindgen.workspace = true
