[package]
name = "wasi-http"
description = "Wasm http WIT implementation using wasmtime-wasi-http"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
futures.workspace = true
http.workspace = true
tracing.workspace = true

# host dependencies
[target.'cfg(unix)'.dependencies]
hyper = "1.7.0"
runtime.workspace = true
tokio.workspace = true
wasmtime.workspace = true
wasmtime-wasi-http.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
axum.workspace = true
bincode = "2.0.1"
bytes.workspace = true
credibil-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
wasi.workspace = true
wit-bindgen.workspace = true
percent-encoding = "2.3.2"
wasi-keyvalue.workspace = true
