[package]
name = "wasi-http"
description = "Wasm http WIT implementation using wasmtime-wasi-http"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
http.workspace = true
tracing.workspace = true

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = "1.7.0"
runtime.workspace = true
tokio.workspace = true
wasmtime = { workspace = true, features = ["component-model-async"] }
wasmtime-wasi-http.workspace = true
http-body-util.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
axum.workspace = true
bincode = "2.0.1"
bytes.workspace = true
credibil-encoding.workspace = true
http-body = "1.0.1"
http-body-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
wit-bindgen.workspace = true
percent-encoding = "2.3.2"
wasi-keyvalue.workspace = true
wasip3.workspace = true

serde_urlencoded = "0.7.1"
