[package]
name = "wasi-http"
description = "WASI http WIT implementation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
http.workspace = true
tracing.workspace = true

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
base64ct.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
runtime.workspace = true
tokio.workspace = true
wasmtime = { workspace = true, features = ["component-model-async"] }
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
axum.workspace = true
bincode = "2.0.1"
bytes.workspace = true
credibil-encoding.workspace = true
http-body = "1.0.1"
http-body-util.workspace = true
percent-encoding = "2.3.2"
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
wasi-keyvalue.workspace = true
wasip3.workspace = true
